Spacing of address lines Fixing bill address updates

--- a/app/assets/stylesheets/store/spree_address_book.scss
+++ b/app/assets/stylesheets/store/spree_address_book.scss
@@ -12,4 +12,4 @@ div#checkout #checkout_form_address {
 
 .hidden { display: none; }
 
-.address_one_liner span {display:inline-block;margin-right:12px;}
+.address_one_liner span {display:inline-block;margin-right:12px;padding:3px;}
